tests/esproposal_optional_chain.enable/esproposal_optional_chain.enable.exp
Error ---------------------------------------------------------------------------------------------------- test.js:10:14

Unexpected token ?.

   10| var bar = foo?.bar;
                    ^^



Found 1 error
